--- a/fiorella.css
+++ b/fiorella.css
@@ -12,10 +12,13 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 35px 60px;
+    positin: sticky;
+    top: 0;
+    z-index: 9999999;
+    background-color: white;
 }
 
 .header_img img {
-    /* margin-right: 90px; */
     width: 210px;
     height: 25px;
 }
@@ -25,8 +28,6 @@ header {
     align-items: center;
     justify-content: center;
     gap: 10px;
-
-
 }
 
 .header_center ul {
@@ -39,20 +40,28 @@ header {
     list-style: none;
     padding-right: 30px;
     transition: all 0.3s ease;
+    margin: 0;
 }
-.header_center ul  li{
+
+.header_center ul li {
     transition: all 0.3s ease;
 }
+
 .header_center ul li:hover {
     border-bottom: 1px solid #1B1B1B;
 
-  }
-.header_right{
+}
+
+.header_right {
     display: flex;
     align-items: center;
     justify-content: center;
-    
 }
+
+.header_right p {
+    margin: 0;
+}
+
 .swiper-container {
     width: 100vw;
     height: 515px;
@@ -83,6 +92,24 @@ body {
     text-align: center;
 }
 
+.main_yazi {
+    text-align: start;
+}
+
+.ilk h4 {
+    font-family: "Playfair Display", serif;
+    ;
+    font-size: 40px;
+    font-weight: 400;
+    text-align: start;
+}
+
+.ilk p {
+    font-family: Lora;
+    font-size: 17px;
+    color: #6d6a6d;
+}
+
 .swiper-slide .slide-01 {
     background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-slider-background.jpg);
     transform-origin: 50% 50%;
@@ -99,54 +126,60 @@ body {
 }
 
 
-/*   
-  .swiper-scale-effect .swiper-slide-cover {
+
+.swiper-scale-effect .swiper-slide-cover {
     transition-timing-function: linear;
     transition-duration: 20s;
     transform: scale(1);
-  }
-  
-  .swiper-scale-effect .swiper-slide.swiper-slide-active .swiper-slide-cover {
+}
+
+.swiper-scale-effect .swiper-slide.swiper-slide-active .swiper-slide-cover {
     transform: scale(1.3);
-  }
-  
-  :root {
+}
+
+:root {
     --swiper-pagination-bottom: 40px;
     --swiper-theme-color: rgba(252, 252, 252, 0.85) !important;
-  }
-  .swiper-lazy-preloader-white {
+}
+
+.swiper-lazy-preloader-white {
     --swiper-preloader-color: #FCFCFC;
-  }
-  .swiper-lazy-preloader-black {
+}
+
+.swiper-lazy-preloader-black {
     --swiper-preloader-color: #262626;
-  } */
-/* .swiper-button-prev,
-  .swiper-button-next {
+}
+
+.swiper-button-prev,
+.swiper-button-next {
     background: transparent;
     opacity: 0.55;
     --swiper-navigation-color: rgba(252, 252, 252, 0.85);
     transition: opacity 0.3s ease, color 0.3s ease;
-  }
-  .swiper-button-prev:hover,
-  .swiper-button-next:hover {
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
     background: transparent;
     opacity: 0.85;
     --swiper-navigation-color: #fcfcfc;
-  }
-  .swiper-pagination-bullet {
+}
+
+.swiper-pagination-bullet {
     width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 10px)) !important;
     height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 10px)) !important;
     box-shadow: inset 1px 1px 1px rgba(38, 38, 38, 0.85);
     background: var(--swiper-pagination-bullet-inactive-color, rgba(252, 252, 252, 0.85)) !important;
     opacity: var(--swiper-pagination-bullet-inactive-opacity, 0.55) !important;
     --swiper-pagination-bullet-horizontal-gap: 6px;
-  }
-  .swiper-pagination-bullet-active {
+}
+
+.swiper-pagination-bullet-active {
     box-shadow: inset 1px 1px 1px rgba(38, 38, 38, 0.85);
     background: var(--swiper-pagination-bullet-active-color, rgba(252, 252, 252, 0.85)) !important;
     opacity: var(--swiper-pagination-bullet-active-opacity, 0.85) !important;
     --swiper-pagination-bullet-horizontal-gap: 10px;
-  } */
+}
 
 .main_yazi {
     width: 500px;
@@ -162,6 +195,7 @@ body {
 
 footer {
     background: #fefaf3;
+
 }
 
 .footer_frst {
@@ -176,6 +210,8 @@ footer {
 
 .footer_frst ul li {
     list-style: none;
+
+
 }
 
 .footer_last {
@@ -192,9 +228,10 @@ footer {
     text-decoration: none;
     padding-right: 8px;
     color: #AFAFAF;
-    
+
 }
-.footer_frst_card h4{
+
+.footer_frst_card h4 {
     color: #000;
     font-family: Montserrat;
     font-size: 12px;
@@ -204,19 +241,20 @@ footer {
     text-transform: uppercase;
 }
 
-.footer_frst_card li{
+
+.footer_frst_card li {
     font-size: 15px;
     color: #8b8b8b;
 }
 
-.footer_xet{
+.footer_xet {
     width: 85%;
     height: 1px;
     margin: 0 auto;
     border: 1px solid #AFAFAF;
 }
 
-.bes{
+.bes {
     background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-background-img.jpg);
     background-attachment: fixed;
     background-position: 50% 1px;
@@ -227,11 +265,8 @@ footer {
     justify-content: center;
     flex-direction: column;
 }
-/* .bes_search{
-    position: sticky;
-} */
 
-.bes h3{
+.bes h3 {
     color: white;
     font-weight: 600;
     font-size: 30px;
@@ -240,15 +275,15 @@ footer {
     margin-bottom: 30px;
 }
 
-.bes_search input{
-width: 450px;
-height: 60px;
-padding: 15px;
-font-family: Montserrat, sans-serif;
-border: 1px solid #e8e8e8;
+.bes_search input {
+    width: 450px;
+    height: 60px;
+    padding: 15px;
+    font-family: Montserrat, sans-serif;
+    border: 1px solid #e8e8e8;
 }
 
-.bes_search button{
+.bes_search button {
     font-family: Montserrat, sans-serif;
     background: #f34f3f;
     font-weight: 500;
@@ -258,7 +293,7 @@ border: 1px solid #e8e8e8;
     border: none;
 }
 
-.col-lg-12 ul{
+.col-lg-12 ul {
     margin: 15px 0;
     color: #1B1B1B;
     font-family: Montserrat, sans-serif;
@@ -269,38 +304,33 @@ border: 1px solid #e8e8e8;
     list-style: none;
 }
 
-.col-lg-12 ul li{
+.col-lg-12 ul li {
     margin-right: 25px;
     font-weight: 500;
     text-transform: uppercase;
     font-size: 12px;
     transition: all 0.3s;
-    
+
 }
 
 .col-lg-12 ul li:hover {
     color: #f34f3f;
-  }
+}
 
-.col-lg-12{
+.col-lg-12 {
     margin-right: 200px;
 }
 
 
-.ikinci_filter .col-lg-3 img{
+.ikinci_filter .col-lg-3 img {
 
     width: 100%;
     height: 380px;
-    /* width: 20%;
-    height: 400px;
-     */
 }
 
-.col-lg-3{
+.col-lg-3 {
     width: 335px;
     height: 440px;
-    /* width: 100%;
-    height: 300px; */
     color: #1B1B1B;
     padding: 0 20px;
     font-family: Montserrat, sans-serif;
@@ -308,7 +338,7 @@ border: 1px solid #e8e8e8;
     text-align: center;
 }
 
-.ikinci_filter{
+.ikinci_filter {
     max-width: 1350px;
     width: 100%;
     margin: 50px auto;
@@ -321,10 +351,10 @@ border: 1px solid #e8e8e8;
 
 }
 
-.ikinci_filter button{
+.ikinci_filter button {
     border: none;
 }
 
-.inner_grid_card{
+.inner_grid_card {
     height: 908px;
 }
